домашка за 2 неделю

--- a/scss/delivery.scss
+++ b/scss/delivery.scss
@@ -1,140 +1,361 @@
 .delivery{
     background-image: url('../image/backgrounds/order-background.png');
+    background-size: cover;
 }
 .delivery__title{
     color:$orange_head;
     margin-bottom: 2.75rem;
 }
-.delivery__form{
-    color:white;
-    display: flex;
-    justify-content: space-between;
-    font-size: 0.875rem;
-    font-weight: 300;
-}
-.delivery__data{
-    display: flex;
-    flex-direction: column;
-}
-.delivery__input{
-    border:none;
-    height: 2.1875rem;
-    border-radius:0.3125rem;
-    border: 1px solid #d1cfcb;
-    &--222px{
-        width: 13.875rem;
-    }
-    &--460px{
-        width: 28.75rem;
-    }
-    &--100px{
-        width: 6.25rem;
-    }
-    &:active,&:hover{
-        border: 0.125rem solid #f9b43b;
-        transition: 0.4s;
-    }
- 
-}
-.delivery__data_label{
-    display: flex;
-    flex-direction: column;
-}
-.delivery__data_container{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1.25rem;
-    &:last-child{
-        margin-bottom: 0;
-    }
-}
-.delivery__text{
-    width: 28.75rem;
-    height: 6.875rem;
-    border: 0.0625rem solid #d1cfcb;
-    border-radius:0.3125rem;
-}
-.delivery__data_elem{
-    margin-bottom: 1.8125rem;
-    label{
-        padding-left: 1.5625rem;
+// .delivery__form{
+//     color:white;
+//     display: flex;
+//     justify-content: space-between;
+//     font-size: 0.875rem;
+//     font-weight: 300;
+//     margin-left: -2%;
+//     @include tablets{
+//         flex-direction:column;
+//         margin-left: 0;
+//     }
+// }
+// .delivery__data{
+//     display: flex;
+//     flex-direction: column;
+//     margin-left: 2%;
+//     width:50%;
+// }
 
-    }
-}
-.delivery__data_button{
+// .delivery__input{
+//     border:none;
+//     height: 2.1875rem;
+//     border-radius:0.3125rem;
+//     border: 1px solid #d1cfcb;
+//     // &--222px{
+//     //    // width: 13.875rem;
+//     // }
+//     // &--460px{
+//     //     //width: 28.75rem;
+//     // }
+//     &--100px{
+//        width: 6.25rem;
+//     }
+//     &:active,&:hover{
+//         border: 0.125rem solid #f9b43b;
+//         transition: 0.4s;
+//     }
+ 
+// }
+// .delivery__data_label{
+//     display: flex;
+//     flex-direction: column;
+//     flex:1;
+//     margin-left: 2%;
+//     @include tablets{
+//         margin-left: 2%;
+       
+//     }
+// }
+// .delivery__data_container{
+//     display: flex;
+//     justify-content: space-between;
+//     margin-bottom: 1.25rem;
+//     margin-left: -2%;
+//     &:last-child{
+//         margin-bottom: 0;
+//     }
+//     @include tablets{
+//     margin-left: -2%;
+//     }
+    
+// }
+// .delivery__data_container-double{
+//     .delivery__data_label{
+//    width: calc(100% / 2 - rem(20px));
+//    margin-left: rem(20px);
+//  }
+// }
+// .delivery__data_container-four{
+//     .delivery__data_label{
+//    width: calc(100% / 4 - rem(20px));
+//    margin-left: rem(20px);
+//  }
+// }
+// .delivery__text{
+//    // width: 28.75rem;
+//     height: 6.875rem;
+//     border: 0.0625rem solid #d1cfcb;
+//     border-radius:0.3125rem;
+// }
+// .delivery__data_elem{
+//     margin-bottom: 1.8125rem;
+//     label{
+//         padding-left: 1.5625rem;
+
+//     }
+// }
+// .delivery__data_button{
+//     display: flex;
+//     flex-direction: row;
+// }
+// .delivery__order{
+//     background: $orange_button;
+// }
+// .delivery__reset{
+//     background: transparent;
+//     border:none;
+//     text-transform: capitalize;
+// }
+// .delivery__text{
+//     margin-bottom: 1.25rem;
+//     resize: none;
+// }
+// .delivery__field{
+//     margin-bottom: 0.5625rem;
+// }
+// .delivery__visually-hidden{
+//     display: none;
+// }
+// .delivery__change{
+//     margin-right: 1.25rem;
+// }
+// .delivery__radio-label{
+//     position: relative;
+//     &:before{
+//         content:'';
+//         width: 0.9375rem;
+//         height: 0.9375rem;
+//         border-radius: 50%;
+//         background: white;
+//         position: absolute;
+//         left: 0%;
+//     }
+// }
+// .delivery__radio{
+//     &:checked + .delivery__radio-label{
+//         &:after{
+//             content: '';
+//             width: 0.4375rem;
+//             height: 0.4375rem;
+//             border-radius: 50%;
+//             background-color: #e35028;
+//             position: absolute;
+//             left: 3%;
+//             top: 26%;
+//         }
+//     }
+// }
+// .delivery__checkbox-label{
+//     position: relative;
+//     &:before{
+//         content:'';
+//         width: 0.9375rem;
+//         height: 0.9375rem;
+//         background: white;
+//         position: absolute;
+//         left: 0%;
+//     }
+// }
+// .delivery__checkbox{
+//     &:checked + .delivery__checkbox-label{
+//         &:after{
+//             content: '';
+//             width: 0.75rem;
+//             height: 0.625rem;
+//             background:url('../icons/checked.png') no-repeat;
+//             position: absolute;
+//             // left: 3%;
+//             // top: 26%;
+//             top:20%;
+//             left:1%;
+//         }
+//     }
+// }
+
+.order {
     display: flex;
-    flex-direction: row;
-}
-.delivery__order{
-    background: $orange_button;
-}
-.delivery__reset{
-    background: transparent;
-    border:none;
-    text-transform: capitalize;
-}
-.delivery__text{
-    margin-bottom: 1.25rem;
+    align-items: center;
+    .section__title {
+      text-align: center;
+    }
+  }
+  
+  .order__form {
+   display: flex;
+   justify-content: center;
+    color:white;
+    font-size: 14px;
+    font-weight: 300;
+    margin-left: -2%;
+    @include tablets {
+      margin-left: 0;
+      padding: 0 20%;
+    }
+    @include phones {
+      padding: 0;
+    }
+  }
+  
+  .order__form-col {
+    float: left;
+    width: 45%;
+    margin-left: 2%;
+    @include tablets {
+      width: 100%;
+      float: none;
+      margin-left: 0;
+    }
+  }
+  
+  .order__form-row {
+    margin-bottom: 1rem;
+    display: flex;
+    @include phones {
+      margin-bottom: 0.4375rem;
+    }
+  }
+  
+  .order__form-label {
+    margin-bottom: 1.0625rem;
+   
+    color: #fff;
+    font-size: 0.875rem;
+    @include phones {
+      margin-bottom: 0.3125rem;
+    }
+  }
+  
+  .order__form-input {
+    font-size: 0.875rem;
+    padding: 0.625rem;
+    padding: 0.3125rem 0.625rem;
+    border: 0.0625rem solid #d1cfcb;
+    border-radius: 0.3125rem;
+    width: 100%;
+  }
+  
+  .order__form-block {
+    display: block;
+    width: 100%;
+  }
+  
+  .order__form-row_double {
+    margin-left: -1.25rem;
+    .order__form-block {
+      width: calc(100% / 2 - 1.25rem);
+      margin-left: 1.25rem;
+    }
+  }
+  
+  .order__form-row_quatro {
+    margin-left: -1.25rem;
+    .order__form-block {
+      width: calc(100% / 4 - 1.25rem);
+      margin-left: 1.25rem;
+    }
+  }
+  
+  .order__form-input_textarea {
+    height: 6.875rem;
     resize: none;
-}
-.delivery__field{
-    margin-bottom: 0.5625rem;
-}
-.delivery__visually-hidden{
-    display: none;
-}
-.delivery__change{
+  }
+  
+  .order__form-buttons {
+    @include phones {
+      .order__form-row {
+        justify-content: center;
+        margin-bottom: 1.0625rem;
+      }
+    }
+  }
+  
+  .order__radio {
+    position: relative;
+    white-space: nowrap;
     margin-right: 1.25rem;
-}
-.delivery__radio-label{
+    cursor: pointer;
+    display: flex;
+  }
+  
+  .order__radio-elem {
+    position: absolute;
+    top: 0;
+    left: -624.9375rem;
+  }
+  
+  .order__radio-fake {
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    background: #fff;
     position: relative;
-    &:before{
-        content:'';
-        width: 0.9375rem;
-        height: 0.9375rem;
-        border-radius: 50%;
-        background: white;
-        position: absolute;
-        left: 0%;
+    &:after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 0rem;
+      height: 0rem;
+      border-radius: 50%;
+      background: $orange_button;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: width .3s, height .3s;
     }
-}
-.delivery__radio{
-    &:checked + .delivery__radio-label{
-        &:after{
-            content: '';
-            width: 0.4375rem;
-            height: 0.4375rem;
-            border-radius: 50%;
-            background-color: #e35028;
-            position: absolute;
-            left: 3%;
-            top: 26%;
+  }
+  
+  .order__radio-elem:checked {
+    &+.order__radio-fake {
+      &:after {
+        width: 0.5rem;
+        height:0.5rem;
+      }
+    }
+  }
+  
+  .order__radio-title {
+    font-size: 0.875rem;
+    color: #fff;
+    margin-left: 0.625rem;
+  }
+  
+  .order__radio_checkbox {
+    .order__radio-fake {
+      border-radius: 0rem;
+    }
+    .order__radio-elem {
+      &+.order__radio-fake {
+        &:after {
+          background: transparent;
         }
+      }
     }
-}
-.delivery__checkbox-label{
-    position: relative;
-    &:before{
-        content:'';
-        width: 0.9375rem;
-        height: 0.9375rem;
-        background: white;
-        position: absolute;
-        left: 0%;
-    }
-}
-.delivery__checkbox{
-    &:checked + .delivery__checkbox-label{
-        &:after{
-            content: '';
-            width: 0.75rem;
-            height: 0.625rem;
-            background:url('../icons/checked.png') no-repeat;
-            position: absolute;
-            // left: 3%;
-            // top: 26%;
-            top:20%;
-            left:1%;
+    .order__radio-elem:checked {
+      &+.order__radio-fake {
+        &:after {
+        background:url('../icons/checked.png') no-repeat;
+        background-size: contain;
+        width: 0.6875rem;
+        height: 0.5625rem;
         }
+      }
     }
-}
+  }
+  
+  .order__form-button {
+    margin-right: 1.25rem;
+    border: 0;
+    background: $orange_button;
+    font-size: 0.8125rem;
+    text-transform: uppercase;
+    border-radius: 0.3125rem;
+    color: #ffffff;
+    padding: 0.625rem 0.9375rem;
+    cursor: pointer;
+  }
+  
+  .order__form-button_reset {
+    padding-left: 0;
+    padding-right: 0;
+    text-transform: none;
+    background: transparent;
+  }
