--- a/scss/sprite.scss
+++ b/scss/sprite.scss
@@ -41,8 +41,8 @@
     }
 }
 .drops{
-    width: 26.875rem;
-    height: 25rem;
+   width: 90%;
+   height: 90%;
     position: absolute;
     top:0;
 }
