--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,13 @@
+
+
+
+$tablets: 768px;
+$phones: 480px;
+
+@import "../scss/media.scss";
+
+
+
 @import "../scss/fonts.scss";
 @import "../scss/layout.scss";
 @import "../scss/variables.scss";
@@ -15,6 +25,8 @@
 @import "../scss/footer.scss";
 @import "../scss/delivery.scss";
 @import "../scss/sprite.scss";
+
+
 
 
 
