--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -7,7 +7,8 @@
     padding:0.6875rem 0rem;  
     display: flex;
     justify-content: space-between; 
-   
+    background-image: url('../image/backgrounds/order-background.png');
+    background-size: cover; 
 }
 .contacts{
     font-family: 'Ubuntu', sans-serif;
@@ -21,6 +22,12 @@
     font-weight: 700;
     text-decoration: none;
     color:$orange_button;
+}
+.contacts__phone{
+    @include phones{
+        text-align: center;
+        margin-bottom: 10px;
+    }
 }
 .social__list{
     display: flex;
