--- a/scss/header.scss
+++ b/scss/header.scss
@@ -10,6 +10,8 @@
     display: flex;
     justify-content: flex-end;
     align-items: center; 
+    flex:1;
+    
 }
 .header__order-btn{
     background-color:$orange_button;
@@ -19,6 +21,9 @@
     display: flex;
     align-items: center;
     list-style: none;
+    @include tablets{
+        display: none;
+    }
 }
 .nav__item{
     margin-right: 1rem;
@@ -41,11 +46,53 @@
     }
 }
 .nav__link{
-    font-size: 0.8125rem;
+    font-size: 0.725rem;//0.8125rem;
     color:white;
     text-transform: uppercase;
     text-decoration: none;
 }
+
+
+
+.hamburger-menu-link {
+	vertical-align: middle;
+	position: relative;
+	height: 1.375rem;
+	align-items: center;
+	margin-left: 1.875rem;
+	display: none;
+
+	@include tablets {
+		display: inline-flex;
+	}
+}
+
+.hamburger-menu-link__bars {
+	&, &:before, &:after {
+		background: #fff;
+		width: 1.5rem;
+		height: 0.3125rem;
+		border-radius: 0.1875rem;
+	}
+
+	&:before, &:after {
+		content: "";
+		display: block;
+		position: absolute;
+	}
+
+	&:before {
+		top: 0;
+	}
+
+	&:after {
+		bottom: 0;
+    }
+}
+
+
+
+// }
 // .logo{
 //     background:url('icons/logo.svg') center center no-repeat ;
 //     width:6.25rem;
