--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -6,6 +6,12 @@
 }
 html{
     font-size: 16px;
+    @include tablets{
+        font-size: 14px;
+    }
+    @include phones{
+       font-size: 13px;
+   }
 }
 body{
     -webkit-font-smoothing: antialiased;
@@ -22,8 +28,9 @@ body,html{
 .container{
     // width:1100px;
     // margin: 0 auto;
-    width: 1100px;
-    padding: 0 80px;
+    max-width: 940px;
+    width:95%;
+    //padding: 0 80px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -33,6 +40,10 @@ body,html{
     display: flex;
     justify-content: space-between;
     flex-direction:row;
+    @include phones{
+        flex-direction: column;
+        align-items:center;
+    }
 }
 .container--delivery{
     display: flex;
@@ -44,7 +55,7 @@ body,html{
 .wrapper{
    position: relative;
    width: 100%;
-   min-width: 940px + 20px;
+   //max-width: 940px + 20px;
    min-height: 100%;
    overflow: hidden;
 }
