--- a/scss/map.scss
+++ b/scss/map.scss
@@ -1,4 +1,5 @@
 .map{
     background-image: url('../image/backgrounds/map-background.png');
+    background-position: center;
    position: relative;
 }
