--- a/scss/reviews.scss
+++ b/scss/reviews.scss
@@ -8,12 +8,17 @@
 }
 .reviews__item{
     list-style: none;
-    width:25%;
+    //width:25%;
+    width: calc(100%/4);
     height: 50vh;
     &:nth-child(2){
        .reviews__avatar{
             background-position: 80%;
        }
+    }
+    @include tablets{
+        width: calc(100%/2);
+        height: 25vh;
     }
 }
 .reviews__avatar{
@@ -22,7 +27,6 @@
     height: 100%;
     background-position: 50%;
     background-size: cover;
-   
 }
 .reviews__content{
     filter: grayscale(0);
@@ -38,6 +42,11 @@
     color:white;
     &:hover{
         opacity: 1;
+        transition: 1s;
+    }
+    @include tablets{
+        text-align: center;
+        padding: 0 16%;
     }
     
 }
@@ -47,15 +56,24 @@
     font-size: 0.875rem;
     line-height: 1.5rem;
     padding-bottom: 1.875rem;
+    @include phones{
+        display: none;
+    }
 }
 .reviews__name{
     font-family:'Gagalin',sans-serif;
     text-transform: uppercase;
     font-size: 0.875rem;
     padding-bottom: 1.875rem;
+    @include phones{
+        font-size: 1.5rem;
+    }
 }
 .reviews__more-link{
 //   @extend %button;
   background-color: #2f3234;
   width: 6.875rem;
+  @include tablets{
+      margin: 0 auto;
+  }
 }
