--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -24,6 +24,9 @@ body,html{
     height: 100vh;
     min-height: 650px;
     background-size:cover;
+    @include tablets{
+        min-height: 0;
+    }
 }
 .container{
     // width:1100px;
