--- a/scss/section-title.scss
+++ b/scss/section-title.scss
@@ -6,7 +6,8 @@
         text-align: center;
     }
     @include phones{
-        font-size: 3.5rem;
+        font-size: 3.45rem;
+        white-space: nowrap;
     }
 }
 // .section-title--centered{
