--- a/scss/we-best.scss
+++ b/scss/we-best.scss
@@ -42,7 +42,7 @@
         font-size: 1.5rem;
         font-weight: 500; 
         margin-bottom: 0.625rem;
-        line-height: 1.35rem;
+        //line-height: 1.35rem;
     }
     p{
         font-family: 'Ubuntu', sans-serif;
