--- a/styles/style.css
+++ b/styles/style.css
@@ -98,7 +98,7 @@ img {
       padding: 0 20%; } }
   @media screen and (max-width: 480px) {
     .welcome__content {
-      padding: 0 9%; } }
+      padding: 0 10%; } }
 
 .welcome__content-image {
   padding: 0 0.9375rem;
@@ -257,8 +257,7 @@ img {
     font-family: 'lifehack', sans-serif;
     font-size: 1.5rem;
     font-weight: 500;
-    margin-bottom: 0.625rem;
-    line-height: 1.35rem; }
+    margin-bottom: 0.625rem; }
   .advantages__desc p {
     font-family: 'Ubuntu', sans-serif;
     font-weight: 300;
@@ -397,7 +396,8 @@ img {
     text-align: center; }
   @media screen and (max-width: 480px) {
     .section-title {
-      font-size: 3.5rem; } }
+      font-size: 3.45rem;
+      white-space: nowrap; } }
 
 .menu {
   display: flex;
