изменения по комментариям

--- a/styles/style.css
+++ b/styles/style.css
@@ -126,7 +126,7 @@ img {
 
 .welcome__content-desc {
   font-family: 'lifehack',sans-serif;
-  font-size: 4.0625rem;
+  font-size: 3.7625rem;
   line-height: 1;
   text-transform: lowercase; }
   @media screen and (max-width: 480px) {
@@ -319,7 +319,10 @@ img {
 
 .header__order-btn {
   background-color: #e45028;
-  margin-left: 0.9375rem; }
+  margin-left: 2%; }
+
+.header__logo {
+  margin-right: 2%; }
 
 .nav__list {
   display: flex;
@@ -330,7 +333,7 @@ img {
       display: none; } }
 
 .nav__item {
-  margin-right: 1rem;
+  margin-right: 0.5rem;
   display: flex;
   align-items: center; }
   .nav__item:last-child {
@@ -343,13 +346,14 @@ img {
     height: 0.25rem;
     background: #fff;
     border-radius: 50%;
-    margin-left: 0.9375rem; }
+    margin-left: 0.6375rem; }
 
 .nav__link {
-  font-size: 0.725rem;
+  font-size: 0.72rem;
   color: white;
   text-transform: uppercase;
-  text-decoration: none; }
+  text-decoration: none;
+  white-space: nowrap; }
 
 .hamburger-menu-link {
   vertical-align: middle;
@@ -390,8 +394,9 @@ img {
 
 .section-title {
   font-family: 'gagalin',sans-serif;
-  font-size: 4.5rem;
-  text-transform: uppercase; }
+  font-size: 4.4rem;
+  text-transform: uppercase;
+  white-space: nowrap; }
   .section-title--centered {
     text-align: center; }
   @media screen and (max-width: 480px) {
