--- a/scss/header.scss
+++ b/scss/header.scss
@@ -15,7 +15,10 @@
 }
 .header__order-btn{
     background-color:$orange_button;
-    margin-left: 0.9375rem;
+    margin-left: 2%;
+}
+.header__logo{
+    margin-right: 2%;
 }
 .nav__list{
     display: flex;
@@ -26,7 +29,7 @@
     }
 }
 .nav__item{
-    margin-right: 1rem;
+    margin-right: 0.5rem;
     display: flex;
     align-items: center;
     &:last-child{
@@ -41,15 +44,16 @@
         height: 0.25rem;
         background: #fff;
         border-radius: 50%;
-        margin-left: 0.9375rem;
+        margin-left: 0.6375rem;
 
     }
 }
 .nav__link{
-    font-size: 0.725rem;//0.8125rem;
+    font-size: 0.72rem;//0.8125rem;
     color:white;
     text-transform: uppercase;
     text-decoration: none;
+    white-space: nowrap;
 }
 
 
