изменения по комментариям 2

--- a/scss/fixed-menu.scss
+++ b/scss/fixed-menu.scss
@@ -6,6 +6,9 @@
     list-style: none;
     display: flex;
     flex-direction: column;
+    @include tablets{
+        display: none;
+    }
 }
 .change__item{
     margin-bottom: 1.3125rem;
