--- a/scss/delivery.scss
+++ b/scss/delivery.scss
@@ -5,6 +5,9 @@
 .delivery__title{
     color:$orange_head;
     margin-bottom: 2.75rem;
+    @include phones{
+        font-size: 2.45rem;
+    }
 }
 // .delivery__form{
 //     color:white;
@@ -183,7 +186,7 @@
    display: flex;
    justify-content: center;
     color:white;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 300;
     margin-left: -2%;
     @include tablets {
