--- a/styles/style.scss
+++ b/styles/style.scss
@@ -24,6 +24,7 @@ $phones: 480px;
 @import "../scss/map.scss";
 @import "../scss/footer.scss";
 @import "../scss/delivery.scss";
+@import "../scss/burger-slider.scss";
 @import "../scss/sprite.scss";
 
 
